force-app/main/default/objects/KCPQ_Master_Distributor_Price_Table__c/KCPQ_Master_Distributor_Price_Table__c.object-meta.xml
<CustomObject>
    <label>Master Distributor Price Table</label>
    <nameField>
        <label>Master Builder Price Table Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Master Distributor Price Tables</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>