force-app/main/default/objects/KCPQ_Master_Distributor_Price_Table__c/fields/KCPQ_Account_Name__c.field-meta.xml
<CustomField>
    <fullName>KCPQ_Account_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Master Distributor Price Tables</relationshipLabel>
    <relationshipName>Master_Distributor_Price_Tables</relationshipName>
    <type>Lookup</type>
</CustomField>