force-app/main/default/objects/KCPQ_Master_Distributor_Price_Table__c/fields/KCPQ_DM_Percentage__c.field-meta.xml
<CustomField>
    <fullName>KCPQ_DM_Percentage__c</fullName>
    <label>DM Percentage</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>