force-app/main/default/objects/KCPQ_Master_Distributor_Price_Table__c/fields/KCPQ_Family__c.field-meta.xml
<CustomField>
    <fullName>KCPQ_Family__c</fullName>
    <formula>TEXT(KCPQ_Product_ID__r.Family)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Family</label>
    <type>Text</type>
</CustomField>