force-app/main/default/objects/KCPQ_Master_Distributor_Price_Table__c/fields/KCPQ_Product_Description__c.field-meta.xml
<CustomField>
    <fullName>KCPQ_Product_Description__c</fullName>
    <formula>KCPQ_Product_ID__r.Description</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Description</label>
    <type>Text</type>
</CustomField>