force-app/main/default/objects/KCPQ_Master_Distributor_Price_Table__c/fields/KCPQ_Product_ID__c.field-meta.xml
<CustomField>
    <fullName>KCPQ_Product_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product ID</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Master Distributor Price Tables</relationshipLabel>
    <relationshipName>Master_Distributor_Price_Tables</relationshipName>
    <type>Lookup</type>
</CustomField>