force-app/main/default/objects/KCPQ_Master_Distributor_Price_Table__c/fields/KCPQ_Quote_Price__c.field-meta.xml
<CustomField>
    <fullName>KCPQ_Quote_Price__c</fullName>
    <formula>KCPQ_Product_ID__r.KCPQ_Zone_1_Price_DN__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quote Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>