force-app/main/default/objects/KCPQ_Master_Distributor_Price_Table__c/fields/KCPQ_SNTE__c.field-meta.xml
<CustomField>
    <fullName>KCPQ_SNTE__c</fullName>
    <formula>(KCPQ_Quote_Price__c/(1- KCPQ_DM_Percentage__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SNTE</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>